# PyRconShell

./: .gitignore  README.md  pyproject.toml  rcon-shell.py
.github/workflows/: test.yml
py_rcon_shell/: constants.py  rcon_client.py  rcon_shell.py
py_rcon_shell/tests/: test_rcon_shell.py
